# wa-reminders

./: .editorconfig  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: build_deploy.yml  code_quality.yml
config/: debug_urls.py  urls.py
config/settings/: __init__.py  development.py  production.py
config/settings/components/: async_tasks.py  caches.py  common.py  preferences.py  providers.py  rest_framework.py
docker/: nginx.conf  pushpin.conf  pushpin_routes  start-dev  start-prod  start-worker
fixtures/: email_addresses.json  phone_numbers.json  tenant_customers.json  tenant_users.json  tenants.json  users.json
locale/en/LC_MESSAGES/: django.po
locale/es/LC_MESSAGES/: django.mo  django.po
scripts/: publish_pusher.py  server_events.py  suscribe_pusher.py
src/: urls.py  view_urls.py
src/auth/application/handlers/: get_user_session_token.py
src/auth/application/use_cases/: mixins.py  session_builder.py  session_detailer.py  user_register.py
src/auth/domain/: exceptions.py  interfaces.py
src/auth/domain/repositories/: __init__.py  session.py  session_user.py
src/auth/infrastructure/: bus_wiring.py
src/auth/infrastructure/repositories/: __init__.py  orm_session.py  orm_session_user.py
src/auth/infrastructure/session_token/: jwt_builder.py
src/auth/management/commands/: send_emails.py  touch_superuser.py
src/auth/presentation/: urls.py
src/auth/presentation/api/: login.py  register.py  session.py
src/auth/presentation/forms/: tenant_owner.py
src/common/: constants.py
src/common/application/commands/: notifications.py  pending_actions.py  tenants.py  users.py
src/common/application/helpers/: actions.py  props.py  strings.py  tenants.py  time.py  users.py  values.py
src/common/application/mixins/: tenant.py
src/common/application/presenters/: pending_action.py  permission.py  profile.py  tenant.py  tenant_customer.py  tenant_user.py
src/common/application/queries/: auth.py  classes.py  notifications.py  pending_actions.py  tenants.py  users.py
src/common/application/responses/: auth_session.py  generics.py  pagination.py  pending_action.py  profile.py  tenant_customer.py
src/common/application/shortcuts/: customers_site.py  memberships.py
src/common/database/: types.py
src/common/database/admin/: __init__.py  admin_actions.py  pending_action.py  reminder.py  tenant.py  tenant_customer.py  tenant_user.py  tenant_wa_session.py  user.py
src/common/database/migrations/: 0001_initial.py  0002_reminderorm_reminderrecipientorm.py  0003_alter_reminderrecipientorm_status.py  0004_remove_reminderorm_job_id_and_more.py  0005_alter_reminderorm_status.py
src/common/database/models/: __init__.py  pending_action.py  phone_number.py  reminder.py  tenant.py  tenant_customer.py  tenant_user.py  tenant_wa_session.py  user.py
src/common/database/resources/: membership.py  tenant.py  tenant_customer.py
src/common/database/templatetags/: email_tags.py  json_tags.py
src/common/domain/: __init__.py  events.py  membership_change.py  value_objects.py
src/common/domain/context/: client.py  domain.py  locale.py
src/common/domain/data/: countries.py
src/common/domain/entities/: list_filters.py  pending_action.py  pending_action_context.py  pending_action_result.py  reminder.py  simple_person.py  stream_event.py  tenant.py  tenant_container.py  tenant_customer.py  tenant_user.py  tenant_wa_session.py  user.py  user_context.py  user_profile.py  user_profile_container.py  user_session.py  whatsapp_message.py
src/common/domain/enums/: common.py  countries.py  currencies.py  growth.py  locales.py  notifications.py  permissions.py  reminders.py  tenants.py  users.py
src/common/domain/exceptions/: auth.py  class_sessions.py  classes.py  common.py  enrollments.py  memberships.py  payments.py  permissions.py  users.py
src/common/domain/interfaces/: faker.py  responses.py  services.py  stream_publisher.py  whatsapp.py
src/common/domain/models/: country_config.py  email_address.py  list_filters.py  pagination.py  pending_action_context.py  pending_action_result.py  phone_number.py  picture.py  raw_price.py  session_stats.py  tenant.py  tenant_container.py  tenant_customer.py  tenant_customer_lead.py  tenant_resource.py  tenant_stats.py  tenant_user.py  tenant_wa_session.py  tier.py  user.py  user_context.py  user_profile.py  user_profile_container.py  user_session.py  wa_session.py
src/common/domain/types/: agent_tenant_class.py  permission.py  sessions_calendar.py
src/common/helpers/: dates.py  expects.py  string.py
src/common/infrastructure/: context_builder.py  field_validators.py
src/common/presentation/: app.py  context_processors.py
src/notifications/: enums.py  templates.py  utils.py
src/notifications/application/: presenters.py  responses.py
src/notifications/domain/: exceptions.py  notification.py  notification_recipient.py  notification_target.py  notification_template.py
src/notifications/infrastructure/: bus_wiring.py  scheduled_tasks.py
src/notifications/presentation/: app.py  urls.py
src/pending_actions/domain/: callback_builder.py  exceptions.py  repositories.py
src/pending_actions/infrastructure/: bus_wiring.py  callback_builder.py
src/pending_actions/presentation/: app.py  urls.py
src/reminders/infrastructure/: bus_wiring.py
src/reminders/presentation/: app.py  urls.py
src/tenants/application/: _mixins.py
src/tenants/domain/: exceptions.py
src/tenants/infrastructure/: bus_wiring.py
src/tenants/presentation/: app.py  urls.py
src/users/: enums.py
src/users/application/: mixins.py
src/users/domain/: exceptions.py
src/users/infrastructure/: bus_wiring.py
src/users/presentation/: app.py  exceptions.py  urls.py
src/web/: app.py
src/web/static_src/: package.json  tailwind.config.js
src/web/templates/: home.html
tests/fixtures/: api.py  common.py  domain.py  orm.py
tests/src/: conftest.py
tests/src/auth/: conftest.py
tests/src/common/: conftest.py  test_utils.py
(+393 files in other folders)
